--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -3,6 +3,8 @@
   grid-template-areas:
     "header header"
     "aSide main";
+  grid-template-rows: 70px 1fr;
+  grid-template-columns: 15vw 10fr;
   max-width: 100vw;
   margin: 0 auto;
   background-color: black;
