--- a/src/components/MainContent/VideoArticle/VideoArticle.module.scss
+++ b/src/components/MainContent/VideoArticle/VideoArticle.module.scss
@@ -11,10 +11,10 @@
     transition: all 0.1s ease 0s;
     &:hover {
       cursor: pointer;
-      border: 1px solid rgba(128, 128, 128, 1);
+      background-color: #212121;
     }
     &:active {
-      background-color: #212121;
+      background-color: #2d2d2d;
     }
 
   }
